--- a/tareacajas02.html
+++ b/tareacajas02.html
@@ -5,6 +5,9 @@
     <title>Grillas Tarea</title>
     <link rel="stylesheet" href="tareacajasgr02.css">
   </head>
+
+             <!--  Cajas numeros  -->
+
   <body>
     <div class="p01">
       <div class="box box1">Caja LightRed</div>
